fixed issues with tests